# agentic_rag_hf

./: .gitignore  1. data_cleaning.ipynb  2. create_knowledge_base.ipynb  3. create_evaluation_dataset.ipynb  4. define_agentic_rag.ipynb  5. eval_agentic_vs_standard_rag.ipynb  README.md  pyproject.toml
src/: evaluation.py  process_html.py  retrieval_tool.py  utils.py  vector_db_cfg.py
