[project]
name = "agentic_rag_hf"
version = "0.1.0"
description = "Build an agentic rag application with huggingface."
authors = [
    {name = "your_name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "openai (==1.97.0)",
    "jupyterlab (==4.4.4)",
    "sentence-transformers (==5.0.0)",
    "langchain-openai (==0.3.28)",
    "langchain-core (==0.3.69)",
    "langchain (==0.3.26)",
    "langchain-community (==0.3.27)",
    "transformers (==4.55.0)",
    "datasets (==4.0.0)",
    "bitsandbytes (==0.46.1)",
    "accelerate (==1.9.0)",
    "faiss-cpu (==1.11.0.post1)",
    "openpyxl (==3.1.5)",
    "RAGatouille (==0.0.9.post2)",
    "smolagents[litellm] (==1.21.1)",
    "huggingface-hub (==0.34.4)",
    "ijson (==3.4.0)",
    "trafilatura (==2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
